Se agrefo referencia a System.Enterprise. Solo falta corregir error con SubMain()

--- a/App_Cliente_ejemplo/App_Cliente_ejemplo.vbproj
+++ b/App_Cliente_ejemplo/App_Cliente_ejemplo.vbproj
@@ -48,9 +48,13 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ClassLibrary">
+      <HintPath>..\..\ClassLibrary\ClassLibrary\bin\Debug\ClassLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
+    <Reference Include="System.EnterpriseServices" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
